--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
-<!--<div class="root">-->
+<cx-storefront></cx-storefront>
 
-<!--  <div *ngIf="story.content">-->
-<!--    <ndc-dynamic [ndcDynamicComponent]="components[story.content.component]" [ndcDynamicInputs]="story.content">-->
-<!--    </ndc-dynamic>-->
-<!--  </div>-->
-<!--</div>-->
+<div class="root">
+
+  <div *ngIf="story.content">
+    <ndc-dynamic [ndcDynamicComponent]="components[story.content.component]" [ndcDynamicInputs]="story.content">
+    </ndc-dynamic>
+  </div>
+
+</div>
