--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,2 @@
 <cx-storefront></cx-storefront>
-
-<div class="root">
-
-  <div *ngIf="story.content">
-    <ndc-dynamic [ndcDynamicComponent]="components[story.content.component]" [ndcDynamicInputs]="story.content">
-    </ndc-dynamic>
-  </div>
-
-</div>
+<storyblok-root></storyblok-root>
